- Replace the attribute "size" with "width" in CSS from login input fields (#1486155). - Fix an extra margin in login form (IE6/7)

--- a/skins/default/common.css
+++ b/skins/default/common.css
@@ -517,6 +517,11 @@ a.rcmContactAddress:hover
   padding: 20px 10px 10px 10px;
 }
 
+#rcmloginuser, #rcmloginpwd, #rcmloginhost
+{
+  width: 200px;
+}
+
 #console
 {
   opacity: 0.8;
